# surrealkit

./: .gitignore  Cargo.toml  README.md  example.env
.github/workflows/: cargo.yml  publish-vite-plugin.yml  release-binaries.yml
crates/surrealkit/: Cargo.toml
crates/surrealkit/src/: core.rs  main.rs  migration.rs  rollout.rs  scaffold.rs  schema_state.rs  seed.rs  setup.rs  sync.rs
crates/surrealkit/src/tester/: actors.rs  api.rs  assertions.rs  mod.rs  runner.rs  types.rs
database/: setup.surql
database/tests/: config.toml
database/tests/suites/: smoke.toml
examples/testing/: README.md  config.toml
examples/testing/fixtures/: root_and_access_setup.surql
examples/testing/suites/: root_access_full_stack.toml
src/: commit.rs  config.rs  core.rs  db_capabilities.rs  main.rs  migration.rs  scaffold.rs  seed.rs  setup.rs  status.rs  sync.rs
src/tester/: api.rs  assertions.rs  filters.rs  loader.rs  report.rs
